-fix form on mobile

--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -68,6 +68,7 @@
   padding: 10px 20px;
   font-size: 20px;
   font-weight: 500;
+  min-height: 52px;
 }
 
 .form-check-input:checked {
